# Real_Madrid_Robocup

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  README.md  Rim_6.ipt  bluetooth.c  bluetooth.cpp  bluetooth.h  bluetooth.hpp  control.c  control.cpp  dribbleo.cpp  dribbleo.hpp  imu.c  imu.cpp  imu.h  imu.hpp  main.c  main.cpp  motor_control.c  motor_control.cpp  motor_control.hpp  sharedfunctions.h  wheel_control.c  wheel_control.cpp  wheel_control.h
Bluetooth_RP_C/: CMakeLists.txt
Bluetooth_RP_C/src/: bluetooth.c
Control_of_Robot/: bluetooth.h  imu.h  wheel_control.h
Control_of_Robot_v1/: CMakeLists.txt  bluetooth.c  bluetooth.cpp  bluetooth.h  bluetooth.hpp  control.c  control.cpp  control.h  dribbleo.cpp  dribbleo.hpp  imu.c  imu.cpp  imu.h  imu.hpp  main.c  main.cpp  motor_control.c  motor_control.cpp  motor_control.h  sharedfunctions.h  wheel_control.c  wheel_control.cpp  wheel_control.h  wheel_control.hpp
Develop_App_Bluetooth/: pubspec.yaml
Develop_App_Bluetooth/android/app/: build.gradle
Develop_App_Bluetooth/android/app/src/main/: AndroidManifest.xml
Develop_App_Bluetooth/android/app/src/main/kotlin/com/example/app_control/: MainActivity.kt
Develop_App_Bluetooth/ios/Runner/: Info.plist
Develop_App_Bluetooth/ios/Runner.xcodeproj/: project.pbxproj
Develop_App_Bluetooth/lib/: main.dart
Develop_App_Bluetooth/lib/pages/: connection_bluetooth_page.dart  control_page.dart
Develop_App_Bluetooth/lib/routes/: routes_app.dart
Develop_App_Bluetooth/lib/widgets/: button_control.dart
Develop_App_Bluetooth/linux/: CMakeLists.txt  my_application.cc
Develop_App_Bluetooth/macos/Runner.xcodeproj/: project.pbxproj
Develop_App_Bluetooth/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Develop_App_Bluetooth/macos/Runner/Configs/: AppInfo.xcconfig
Develop_App_Bluetooth/web/: index.html
Develop_App_Bluetooth/windows/: CMakeLists.txt
Develop_App_Bluetooth/windows/runner/: Runner.rc
ENCODER/: .gitignore  CMakeLists.txt  encoder.c  encoder.h  encoderv2.c  encoderv2.h
Prueba_4_motores_pwm_diff_slice/: CMakeLists.txt  Control_4_motores.c  bluetooth.c  bluetooth.h  control.c  encoderv2.c  encoderv2.h  main.c  motor_control.c  motor_control.h  wheel_control.c  wheel_control.h
Prueba_Motores_Config/: CMakeLists.txt  frecuPoli.c
Robocupp Mecanica/Corte Maderas/: Base-Piso1.dxf  Base-Piso2.dxf
Robocupp Mecanica/Gemelo Digital V2/: AST_Bearings_6706-2RS.ipt  Base-Configurable-Dribler.ipt  Base-Dribler.ipt  BaseV3-Piso2-Step.ipt  BaseV7-Corte.dxf  BaseV7.5.ipt  BaseV7.ipt  Cangrejo-Sin-Reductores.iam  Casco.ipt  CascoV2.iam  Dc-Motor.ipt  Dribler-Desmontable.iam  El Cangrejo.iam  Engranaje-Planetario-Montaje.iam  Engranajes-Dribler.iam  Falda-Parte1.ipt  Motor-Soporte-Montaje.iam  OMNIWHEELV4.iam  OmnorollerV4.ipt  Part Studio 1 - Part 1.ipt  Pilar.ipt  Processed_SunGearV3.ipt  Pseudo-SunGear.ipt  Real madrid ( Logo ).ipt  Rim_6V4.ipt  Rim_H6V4.ipt  Rim_HUB_M.ipt  Roller.ipt  SoporteV5.ipt  SunGearV3.ipt  Tope-Eje.ipt  ball bearing 6701 61701.ipt  input_wheel_ipt2.ipt  output_wheel_ipt2.ipt  planetary_gearbox_rueda_exterior_ipt2.ipt
Robocupp Mecanica/Gemelo Digital V2/Engranajes-Dribler/Design Accelerator/: Engranaje A.ipt  Engranaje B.ipt  PseudoRoller.ipt  Spur Gear11.ipt  Spur Gear21.ipt  Spur Gears1.iam
Robocupp Mecanica/Gemelo Digital V2/Engranajes-Dribler/Design Accelerator/OldVersions/: PseudoRoller.0004.ipt
Robocupp Mecanica/Gemelo Digital V2/OldVersions/: Base-Configurable-Dribler.0009.ipt  Base-Dribler.0001.ipt  BaseV3-Piso2-Step.0001.ipt  BaseV7.0001.ipt  BaseV7.5.0001.ipt  Cangrejo-Sin-Reductores.0001.iam  Dc-Motor.0001.ipt  Dribler-Desmontable.0003.iam  El Cangrejo.0008.iam  Engranaje-Planetario-Montaje.0002.iam  Engranajes-Dribler.0001.iam  Motor-Soporte-Montaje.0002.iam  OMNIWHEELV4.0007.iam  Processed_SunGearV3.0002.ipt  Rim_H6V4.0012.ipt  output_wheel_ipt2.0004.ipt  planetary_gearbox_rueda_exterior_ipt2.0004.ipt
Robocupp Mecanica/Piezas Planetario/: IPFSO.chitubox  Montaje_motor_planetario_rueda.iam  OW_IW.chitubox  Part1.ipt  Prueba Tuerca.ipt  Pseudo-SunGear.ipt  SoporteV3.stl  bldc MOTOR.ipt  fijador_planetas.stl  input_wheel.stl  input_wheel_ipt.ipt  input_wheel_ipt2.ipt  output_wheel.stl  output_wheel_ipt.ipt  output_wheel_ipt2.ipt  planetary_gearbox_rueda_exterior.stl  planetary_gearbox_rueda_exterior_ipt.ipt  planetas.stl  sun_gear_v2.stl  sun_gear_v2_ipt.ipt  sun_gear_v2_ipt2.ipt
Robocupp Mecanica/Piezas Planetario/OldVersions/: Montaje_motor_planetario_rueda.0005.iam  Prueba Tuerca.0001.ipt  SunGearV3.0001.ipt  bldc MOTOR.0001.ipt  input_wheel_ipt.0001.ipt  input_wheel_ipt2.0001.ipt  output_wheel_ipt.0001.ipt  output_wheel_ipt2.0005.ipt  planetary_gearbox_rueda_exterior_ipt.0001.ipt  planetary_gearbox_rueda_exterior_ipt2.0003.ipt  sun_gear_v2_ipt.0001.ipt  sun_gear_v2_ipt2.0003.ipt
Rueda 6cm/: Cover_6.ipt  Cover_6.stl  Cover_6P.stl  Omni_Roller_6P.stl  Omni_Roller_con_eje_6P.stl  Output_Resina.dlp  Rim_6P.stl  Rim_H6.ipt  Rim_H6P.stl
Rueda 6cm/OldVersions/: Cover_6.0002.ipt  Rim_6.0001.ipt  Rim_H6.0001.ipt
dribbleo/: CMakeLists.txt  bluetooth.cpp  bluetooth.hpp  dribbleo.cpp  dribbleo.hpp  main.cpp
imu/: CMakeLists.txt  calculoAngulo.c  calibration.c  imu.c  imu.h  myimu.c
